[project]
name = "promptoptimizer"
description = "Optimize prompts for text-to-image models at no cost."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/ciga2011/ComfyUI-PromptOptimizer"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-PromptOptimizer"
Icon = ""
